--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
@@ -28,7 +29,8 @@
     "react-native-svg": "13.9.0",
     "react-redux": "^8.1.2",
     "redux-persist": "^6.0.0",
-    "tailwindcss": "3.3.2"
+    "tailwindcss": "3.3.2",
+    "yup": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
