--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.5.0",
     "expo": "~49.0.8",
     "expo-status-bar": "~1.6.0",
+    "expo-updates": "~0.18.13",
     "formik": "^2.4.5",
     "lodash": "^4.17.21",
     "nativewind": "^2.0.11",
